# alfa

./: .gitignore  AUTHORS  COPYING  COPYRIGHT  Cargo.toml  README.md
crates/alfa/: Cargo.toml
crates/alfa-core/: Cargo.toml
crates/alfa-core/src/: account.rs  cash.rs  fee.rs  fill.rs  fill_model.rs  instrument.rs  lib.rs  order.rs  position.rs  price.rs  signal.rs  size.rs  trading_book.rs  util.rs
crates/alfa/src/: lib.rs
examples/backtest/: Cargo.toml
examples/backtest/src/: backtest.rs  io.rs  main.rs  order.rs
