# SPDX-FileCopyrightText: © 2022 The Alfa Authors <https://github.com/kyper-io/alfa/blob/913e3afe4177a9846b55c7c28c3f43a304736656/AUTHORS>
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "alfa-core"
description = "A low-latency algorithmic trading library"
documentation = "https://docs.rs/alfa-core"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true
serde = { workspace = true, features = ["derive"] }
