# SPDX-FileCopyrightText: © 2022 The Alfa Authors <https://github.com/kyper-io/alfa/blob/913e3afe4177a9846b55c7c28c3f43a304736656/AUTHORS>
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "alfa"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "An ultra-extensible low-latency algorithmic trading engine"
homepage = "https://kyper.io/alfa"
documentation = "https://docs.rs/alfa"
repository = "https://github.com/kyper-io/alfa"
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
