# SPDX-FileCopyrightText: © 2022 The Alfa Authors <https://github.com/kyper-io/alfa/blob/913e3afe4177a9846b55c7c28c3f43a304736656/AUTHORS>
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "backtest"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alfa-core = { path = "../../crates/alfa-core" }
anyhow.workspace = true
chrono.workspace = true
itertools.workspace = true
ndarray.workspace = true
polars = { workspace = true, features = ["ndarray"] }
serde_json.workspace = true
